--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                     <li class="nav-item active">
                         <a href="index.html" class="nav-link">HOME <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="about.html" class="nav-link">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a href="discography.html" class="nav-link">DISCOGRAPHY</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
                 <div id="header-content" class="px-5 pt-3 pb-2 bgoutline rounded">
                     <img src="img/lostinbreakalphawhite.png" alt="lostinbreak"class="mt-5 pt-2 img-fluid" draggable="false">
                     <p id="subtitle" class="mt-3 mb-2">lost in break</p>
-                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">&block;&block;&block; &block;&block; &block;&block;&block;&block;&block;. - out now</h3></a>
+                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">end of story. - out now</h3></a>
             </div>
         </div>
         <div class="container-fluid text-center">
@@ -78,12 +78,12 @@
             
                 <div class="row">
                     <div class="col-md-3"></div>
-                    <div class="col-md-6"><img src="img/albumarts/censored.jpg" class="albumart img-fluid"></div>
+                    <div class="col-md-6"><img src="img/albumarts/endofstory.jpg" class="albumart img-fluid"></div>
                     <div class="col-md-3"></div>
                 </div>
                 <br>
                 <br>
-                <h3>&block;&block;&block; &block;&block; &block;&block;&block;&block;&block;.</h3>
+                <h3>end of story.</h3>
                 <h4>2023-02-21</h4>
                 <a href="https://lostinbreak.bandcamp.com/" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
                 <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="container-fluid text-center pt-4 pb-2" id="footer">
-            <p>&copy; Copyright 2023 </p>
+            <p>&copy; Copyright 2023 lostinbreak</p>
         </div>
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
