--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 <br>
                 <h3>end of story.</h3>
                 <h4>2023-02-21</h4>
-                <a href="https://lostinbreak.bandcamp.com/" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                <a href="https://lostinbreak.bandcamp.com/track/end-of-story" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
                 <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                <a href="https://soundcloud.com/lostinbreak0" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
+                <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
                 <a href="https://www.youtube.com/channel/UC65GcDQ2tMQR8WSWYk5_Faw" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
             </div>
         </div>
