preparing for seraph's release

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <body>
         <!-- Navbar -->
         <nav id="mainNav" class="navbar navbar-dark navbar-expand-md mx-0 px-0 fixed-top">
+            <a href="#" class="navbar-brand pt-0 pl-5 mr-1">
+                <img src="img/lostinbreakalphawhite.png" alt="lostinbreak" draggable="false" height="30em">
+            </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,10 +36,10 @@
                     </li>
                     <!-- <li class="nav-item">
                         <a href="about.html" class="nav-link">ABOUT</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="discography.html" class="nav-link">DISCOGRAPHY</a>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -72,23 +75,24 @@
                 <div class="col-md-2"></div>
             </div>
         </div>
-        <div class="container align-items-center text-center pt-3 mb-4">
+        <div class="container align-items-center text-center mb-4">
             <div id="newrelease">
                 <h1 class="mt-5 mb-3">LATEST RELEASE</h1>
             
                 <div class="row">
                     <div class="col-md-3"></div>
-                    <div class="col-md-6"><img src="img/albumarts/endofstory.jpg" class="albumart img-fluid"></div>
+                    <div class="col-md-6"><img src="img/albumarts/seraph.jpg" class="albumart img-fluid"></div>
                     <div class="col-md-3"></div>
                 </div>
                 <br>
-                <br>
-                <h3>end of story.</h3>
-                <h4>2023-02-21</h4>
-                <a href="https://lostinbreak.bandcamp.com/track/end-of-story" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
-                <a href="https://open.spotify.com/album/1IVeeNx2OjZINWcU4FesPa" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a>
-                <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
+                <h3>seraph</h3>
+                <h4>2023-10-27</h4>
+                <a href="https://lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                <!-- <a href="https://open.spotify.com/album/1IVeeNx2OjZINWcU4FesPa" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
+                <!-- <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
                 <a href="https://youtu.be/HlqiiZrSMbY" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
+                <hr class="shorty">
+                <b><a href="discography.html" class="idLink">DISCOGRAPHY</a></b>
             </div>
         </div>
         <div class="container-fluid text-center pt-4 pb-2" id="footer">
