--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <!-- Navbar -->
         <nav id="mainNav" class="navbar navbar-dark navbar-expand-md mx-0 px-0 fixed-top">
-            <a href="#" class="navbar-brand pt-0 pl-5 mr-1">
+            <a href="#" class="navbar-brand pt-0 ml-5 mr-1">
                 <img src="img/lostinbreakalphawhite.png" alt="lostinbreak" draggable="false" height="30em">
             </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
@@ -48,7 +48,7 @@
                 <div id="header-content" class="px-5 pt-3 pb-2 bgoutline rounded">
                     <img src="img/lostinbreakalphawhite.png" alt="lostinbreak"class="mt-5 pt-2 img-fluid" draggable="false">
                     <p id="subtitle" class="mt-3 mb-2">lost in break</p>
-                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">end of story. - out now</h3></a>
+                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">seraph - out now</h3></a>
             </div>
         </div>
         <div class="container-fluid text-center">
@@ -89,7 +89,7 @@
                 <h4>2023-10-27</h4>
                 <a href="https://lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
                 <!-- <a href="https://open.spotify.com/album/1IVeeNx2OjZINWcU4FesPa" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                <!-- <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
+                <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
                 <a href="https://youtu.be/HlqiiZrSMbY" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
                 <hr class="shorty">
                 <b><a href="discography.html" class="idLink">DISCOGRAPHY</a></b>
