--- a/discography.html
+++ b/discography.html
@@ -23,73 +23,61 @@
     <body>
         <!-- Navbar -->
         <nav id="mainNav" class="navbar navbar-dark navbar-expand-md mx-0 px-0 fixed-top">
+            <a href="#" class="navbar-brand pt-0 ml-5 mr-1">
+                <img src="img/lostinbreakalphawhite.png" alt="lostinbreak" draggable="false" height="30em">
+            </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navLinks">
                 <ul class="navbar-nav ml-3 mr-auto">
-                    <li class="nav-item active">
-                        <a href="index.html" class="nav-link">HOME <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
+                        <a href="index.html" class="nav-link">HOME</a>
+                    </li>
+                    <!-- <li class="nav-item">
                         <a href="about.html" class="nav-link">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="discography.html" class="nav-link">DISCOGRAPHY</a>
+                    </li> -->
+                    <li class="nav-item active">
+                        <a href="discography.html" class="nav-link">DISCOGRAPHY <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="container-fluid mx-0 px-0">
-            <div id="header"  class="d-flex justify-content-center text-center">
-                <div id="header-content" class="px-5 pt-3 pb-2 bgoutline rounded">
-                    <img src="img/lostinbreakalphawhite.png" alt="lostinbreak"class="mt-5 pt-2 img-fluid" draggable="false">
-                    <p id="subtitle" class="mt-3 mb-2">lost in break</p>
-                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">end of story. - out now</h3></a>
+            <div id="discoheader"  class="d-flex justify-content-center text-center align-items-center">
+                <div class="bgoutline rounded px-5 py-3">
+                    <h1>DISCOGRAPHY</h1>
+                </div>
             </div>
         </div>
-        <div class="container-fluid text-center">
-            <br>
-            <i class="bi bi-chevron-bar-down mb-5"></i>
+        <div class="container align-items-center text-center pt-5">
+            <div class="row d-flex justify-content-center m-auto py-5">
+                <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
+                    <img class="img-fluid px-0" src="img/albumArts/seraph.jpg">
+                    <h2 class="discographyHeader">seraph</h3>
+                    <p class="lead mb-0">2023-10-27</p>
+                    <a href="https:/lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                    <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
+                    <a href="https://soundcloud.com/lostinbreak/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://www.youtube.com/watch?v=f0Pp-NRSX1Q" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
+                    
+                </div>
+                <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
+                    <img class="img-fluid px-0" src="img/albumArts/endofstory.jpg">
+                    <h2 class="discographyHeader">end of story.</h3>
+                    <p class="lead mb-0">2023-02-21</p>
+                    <a href="https://lostinbreak.bandcamp.com/track/end-of-story" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://open.spotify.com/album/1IVeeNx2OjZINWcU4FesPa" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://youtu.be/HlqiiZrSMbY" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>    
+                </div>
+                <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
 
-            <div class="row pt-3 pb-4 mt-4 d-flex align-items-center" id="aboutsection">
-                <div class="col-md-2"></div>
-                <div class="col-md-8">
-                    <div class="row bgoutline rounded px-3">
-                        <div id="about" class="d-flex align-items-center col-md-6 mt-5 mb-3 text-left ">
-                            <div>
-                                <h1>About lostinbreak</h1>
-                                <p id="aboutparagraph" class="mt-2">
-                                    Formerly known as Ubered Sandvich, lostinbreak has been producing electronic music since 2014. Inspired by the sounds of many genres such as breakcore and wave, he creates a distinct sound full of warm ambient tones and dark melodies woven together. He also frequently branches out to new genres, trying to find new sounds and stylings to incorporate into his music.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 d-flex align-items-center">
-                            <img src="img/leg.jpg" alt="person"  class="img-fluid mt-5 mb-5">
-                        </div>
-                    </div>
                 </div>
-                <div class="col-md-2"></div>
             </div>
-        </div>
-        <div class="container align-items-center text-center pt-3 mb-4">
-            <div id="newrelease">
-                <h1 class="mt-5 mb-3">LATEST RELEASE</h1>
-            
-                <div class="row">
-                    <div class="col-md-3"></div>
-                    <div class="col-md-6"><img src="img/albumarts/endofstory.jpg" class="albumart img-fluid"></div>
-                    <div class="col-md-3"></div>
-                </div>
-                <br>
-                <br>
-                <h3>end of story.</h3>
-                <h4>2023-02-21</h4>
-                <a href="https://lostinbreak.bandcamp.com/" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
-                <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                <a href="https://soundcloud.com/lostinbreak0" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
-                <a href="https://www.youtube.com/channel/UC65GcDQ2tMQR8WSWYk5_Faw" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
-            </div>
+            <!-- <hr class="shorty">
+            <a href="index.html" class="idLink"><h3 class="text-center border border-white py-2 my-5">back to home</h3></a> -->
+
         </div>
         <div class="container-fluid text-center pt-4 pb-2" id="footer">
             <p>&copy; Copyright 2023 lostinbreak music </p>
