--- a/discography.html
+++ b/discography.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div class="container align-items-center text-center pt-5">
+        <div class="container align-items-center text-center pt-5 minheight">
             <div class="row d-flex justify-content-center m-auto py-5">
                 <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
                     <img class="img-fluid px-0" src="img/albumArts/seraph.jpg">
@@ -77,7 +77,6 @@
             </div>
             <!-- <hr class="shorty">
             <a href="index.html" class="idLink"><h3 class="text-center border border-white py-2 my-5">back to home</h3></a> -->
-
         </div>
         <div class="container-fluid text-center pt-4 pb-2" id="footer">
             <p>&copy; Copyright 2023 lostinbreak music </p>
