--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div id="header-content" class="px-5 pt-3 pb-2 bgoutline rounded">
                     <img src="img/lostinbreakalphawhite.png" alt="lostinbreak"class="mt-5 pt-2 img-fluid" draggable="false">
                     <p id="subtitle" class="mt-3 mb-2">lost in break</p>
-                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">seraph - out now</h3></a>
+                    <a href="#newrelease" class="idLink"><h3 class="text-center border border-white py-2 px-3 my-5">seraph - coming soon</h3></a>
             </div>
         </div>
         <div class="container-fluid text-center">
@@ -59,7 +59,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <div class="row bgoutline rounded px-3">
-                        <div id="about" class="d-flex align-items-center col-md-6 mt-5 mb-3 text-left ">
+                        <div id="about" class="d-flex align-items-center col-md-6 mb-3 text-left ">
                             <div>
                                 <h1>About lostinbreak</h1>
                                 <p id="aboutparagraph" class="mt-2">
