fixed discography images + removed links

--- a/discography.html
+++ b/discography.html
@@ -53,17 +53,17 @@
         <div class="container align-items-center text-center pt-5 minheight">
             <div class="row d-flex justify-content-center m-auto py-5">
                 <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
-                    <img class="img-fluid px-0" src="img/albumArts/seraph.jpg">
+                    <img class="img-fluid px-0" src="img/albumarts/seraph.jpg">
                     <h2 class="discographyHeader">seraph</h3>
                     <p class="lead mb-0">2023-10-27</p>
-                    <a href="https:/lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                    <!-- <a href="https:/lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a> -->
                     <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                    <a href="https://soundcloud.com/lostinbreak/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
-                    <a href="https://www.youtube.com/watch?v=f0Pp-NRSX1Q" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
+                    <!-- <a href="https://soundcloud.com/lostinbreak/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
+                    <!-- <a href="https://www.youtube.com/watch?v=f0Pp-NRSX1Q" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a> -->
                     
                 </div>
                 <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
-                    <img class="img-fluid px-0" src="img/albumArts/endofstory.jpg">
+                    <img class="img-fluid px-0" src="img/albumarts/endofstory.jpg">
                     <h2 class="discographyHeader">end of story.</h3>
                     <p class="lead mb-0">2023-02-21</p>
                     <a href="https://lostinbreak.bandcamp.com/track/end-of-story" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
