--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h4>2023-10-27</h4>
                 <!-- <a href="https://lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a> -->
                 <!-- <a href="https://open.spotify.com/album/1IVeeNx2OjZINWcU4FesPa" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                <!-- <a href="https://soundcloud.com/lostinbreak0/end-of-story" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
+                <!-- <a href="https://soundcloud.com/lostinbreak0/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
                 <!-- <a href="https://youtu.be/HlqiiZrSMbY" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a> -->
                 <hr class="shorty">
                 <b><a href="discography.html" class="idLink">DISCOGRAPHY</a></b>
