--- a/discography.html
+++ b/discography.html
@@ -58,7 +58,7 @@
                     <p class="lead mb-0">2023-10-27</p>
                     <!-- <a href="https:/lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a> -->
                     <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                    <!-- <a href="https://soundcloud.com/lostinbreak/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
+                    <!-- <a href="https://soundcloud.com/lostinbreak0/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
                     <!-- <a href="https://www.youtube.com/watch?v=f0Pp-NRSX1Q" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a> -->
                     
                 </div>
