--- a/discography.html
+++ b/discography.html
@@ -55,11 +55,11 @@
                 <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
                     <img class="img-fluid px-0" src="img/albumarts/seraph.jpg">
                     <h2 class="discographyHeader">seraph</h3>
-                    <p class="lead mb-0">2023-10-27</p>
-                    <!-- <a href="https:/lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a> -->
-                    <!-- <a href="https://open.spotify.com/album/4mXNhWRaD1ZFXv5qmREal1" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a> -->
-                    <!-- <a href="https://soundcloud.com/lostinbreak0/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a> -->
-                    <!-- <a href="https://www.youtube.com/watch?v=f0Pp-NRSX1Q" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a> -->
+                    <p class="lead mb-0">2023-10-24</p>
+                    <a href="https://lostinbreak.bandcamp.com/track/seraph" target="_blank"><img src="img/icons/bandcamp.png" alt="Bandcamp" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://open.spotify.com/album/6XQ2BjRwZYrJy4MMt59fCZ" target="_blank"><img src="img/icons/spotify.png" alt="Spotify" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://soundcloud.com/lostinbreak0/seraph" target="_blank"><img src="img/icons/soundcloud.png" alt="Soundcloud" class="socialIcon m-2" draggable="false"></a>
+                    <a href="https://youtu.be/JijPZwxcXoU" target="_blank"><img src="img/icons/youtube.png" alt="Youtube" class="socialIcon m-2" draggable="false"></a>
                     
                 </div>
                 <div class="col-lg-4 text-center align-items-center discographyEntry pb-3">
